# msc-statistics-dissertation

./: .gitignore  .pre-commit-config.yaml  .todo  Makefile  dataset.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys.json  icons  page-preview.json  snippets  types.json  workspace.json
.stubs/: README.stub
.workflows/: update_readmes.py  update_readmes.yml
Materials/: .todo  Readinglist.md
Organisation/: .todo
Organisation/Meetings/: Supervisor Meeting 1.md  Supervisor Meeting 2.md  Supervisor Meeting 3.md  Supervisor Meeting 4.md
Organisation/Progress Reports/: Progress Report 1.md  Progress Report 2.md  Progress Report 3.md  Progress Report 4.md
Organisation/Timeline/: Timeline.md  delete_Timeline.docx
Organisation/temp/: Dissertation Ideas.md
Organisation/templates/: Meeting.md  Progress Report.md
Project/: .todo  CHANGELOG.md  Makefile  main.py  pyproject.toml
Project/.stubs/: README.stub
Project/docs/: mkdocs.yml
Project/modules/time-series/: config.py  pyproject.toml
Project/modules/time-series/time-series/src/core/: moving_average_process.py  time_series.py
Project/notebooks/: data_test.ipynb  data_test_old.ipynb  empirical_test.ipynb  function_test.ipynb  general_test.ipynb  heston_test.ipynb  heston_test_old.ipynb  notebook_utils.py  option_test.ipynb  (+5 more)
Writeup/: .markdownlint.json  .todo
env/: requirements.txt
utilities/: .setup.sh  obsidian
workflows/: update_readmes.py
(+208 files in other folders)
