[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mayurankv_time_series"
version = "0.0.1"
description = "MSc Statistics Dissertation Project Imperial College London Time Series Models @mayurankv"
authors = [
	{ name = "mayurankv" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = "~=3.11"
