[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "time-series"
version = "0.0.1"
description = "Time Series module for MSc Statistics Dissertation Project Imperial College London @mayurankv"
authors = [
	{ name = "mayurankv" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = "~=3.11"

[tool.ruff]
line-length = 320

[tool.ruff.format]
indent-style = "tab"

[tool.flit.module]
name = "time-series"
